# MLIR-Benchmark

./: CMakeLists.txt
cmake/: DetectArchitecture.cmake
src/: benchmark_main.cpp  workload_benchmark.h
workloads/: batchnorm.mlir  conv2d.mlir  dotprod.mlir  elemadd.mlir  fma.mlir  matmul.mlir  matreduce.mlir  softmax.mlir  transpose.mlir  vecadd.mlir
